--- a/pages/007-build-database-in-2020s.html
+++ b/pages/007-build-database-in-2020s.html
@@ -1,3 +1,4 @@
+<p>Author: Ed Huang (h@pingcap.com), Cofounder, CTO, PingCAP/TiDB</p>
 <p>It's been a long time since I wrote anything, so I'll share what I've been thinking about more recently. Just consider it a record of work.</p>
 <p>Let's start with an important question: If we were to redesign a new database today from the ground up, what would the architecture look like?</p>
 <p>Before I get into the details, let me share my understanding of what developers today (and in the future) expect from a database.</p>
