--- a/pages/013-llm.html
+++ b/pages/013-llm.html
@@ -1,3 +1,8 @@
 <p>
-The invention of recording technology destroyed music score, allowing the emergence of contemporary music based on improvisation (e.g., jazz) because reproducibility was no longer a necessity; photography destroyed classical realism in painting in the same way, allowing the emergence of contemporary art that is more abstract and anti-formal; so will the LLM destroy the software industry, which is based on programming and code (written by human)? Are we software engineers like 18th century painters, and what new forms of creativity will emerge? I seem to have glimpsed some of the dawn of a new era, but it is also the finale of our own era, and we are our own gravediggers, which is actually quite nice, and a great honor :)
+The invention of recording technology destroyed music score, allowing the emergence of contemporary music based on improvisation (e.g., jazz) because reproducibility was no longer a necessity; </p>
+
+<p>photography destroyed classical realism in painting in the same way, allowing the emergence of contemporary art that is more abstract and anti-formal; </p>
+
+<p>
+so will the LLM destroy the software industry, which is based on programming and code (written by human)? Are we software engineers like 18th century painters, and what new forms of creativity will emerge? I seem to have glimpsed some of the dawn of a new era, but it is also the finale of our own era, and we are our own gravediggers, which is actually quite nice, and a great honor :)
 </p>
